# mokumoku-bot

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: f9372abd0049_create_initial_table.py
src/mokumoku_bot/: __init__.py  discord_bot.py  streamlit_app.py  utils.py
src/mokumoku_bot/db/: __init__.py  conn.py
src/mokumoku_bot/model/: history.py
