[project]
name = "mokumoku-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "satodaiki", email = "banana5388@gmail.com" }
]
requires-python = ">=3.13.11"
dependencies = [
    "discord-py>=2.6.4",
    "python-dotenv>=1.2.1",
]

[project.scripts]
serve = "mokumoku_bot:main"

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"
